--- a/quiz3/index.html
+++ b/quiz3/index.html
@@ -265,7 +265,9 @@
             "wirkungsweise_funktionsweise": "Blockierung der neuronalen Signalübertragung",
             "wirkstoffgruppe": "Pyrethroide",
             "wirkungsort": "Zentralnervensystem"
-        },
+            },
+    // Add remaining insect objects here...
+];
 
         let selectedInsekt = null;
 
